--- a/email-service/.env
+++ b/email-service/.env
@@ -15,8 +15,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
+DB_DATABASE=emailservice
+DB_USERNAME=root
 DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
