create new api health for catalog and email services and create postman collection

--- a/catalog-service/.env
+++ b/catalog-service/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:ba4ccxKQbsm+EsWIwrHR+sPTVLPT+g3E+HzhOMZ3k4Y=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://localhost
 api_key=a8be5fd9718acc1afd9beea741a8271c
 NGINXGROUP=www-data
