--- a/catalog-service/composer.json
+++ b/catalog-service/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "spatie/cpu-load-health-check": "^1.0",
         "spatie/laravel-health": "^1.23"
     },
     "require-dev": {
