--- a/api-gateway/composer.json
+++ b/api-gateway/composer.json
@@ -14,7 +14,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "spatie/cpu-load-health-check": "^1.0",
-        "spatie/laravel-health": "^1.23"
+        "spatie/laravel-health": "^1.23",
+        "tymon/jwt-auth": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
