--- a/catalog-service/.env
+++ b/catalog-service/.env
@@ -15,7 +15,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=catalog
+DB_DATABASE=gateway
 DB_USERNAME=root
 DB_PASSWORD=secret
 
