--- a/email-service/src/.env
+++ b/email-service/src/.env
@@ -13,7 +13,7 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=mysqlemailservice
 DB_PORT=3306
 DB_DATABASE=emailservice
 DB_USERNAME=root
